# auth

./: .gitignore  CMakeLists.txt  README.md
example/: auth.cfg  main.cpp
include/massively_auth/: log.hpp  options.hpp  server.hpp
src/: options.cpp  server.cpp
